# drosocode.github.io

./: .gitignore  404.html  CNAME  README.md  config.toml  custom.css  glide.min.css  index.html  index.json  index.xml  sitemap.xml
.github/workflows/: deploy.yaml
about/: index.html
assets/: devicon.min.css  glide.min.js
categories/: index.html
content/: about.md  privacy-policy.md  terms-of-use.md
content/posts/a-comparison-of-upscaling-software-in-2021/: index.md
content/posts/control-your-light-with-a-nintendo-ds/: index.md
content/posts/create-you-own-ambilight-solution/: ambilight.yaml  index.md  tvcard.yaml
content/posts/deploying-sso-in-the-homelab/: index.md
content/posts/easily-create-you-diy-iot-devices-with-esp-home-and-home-assistant/: display.yaml  index.md
content/posts/overengineering-a-mirror-or-how-i-pxe-booted-a-k3s-cluster/: index.md
content/posts/overengineering-a-mirror-or-how-i-pxe-booted-a-k3s-cluster/assets/kinect/: CMakeLists.txt  Dockerfile  frame_grabber.cpp  launch.sh
content/posts/patching-cs2-beta-for-offline-multiplayer/: index.md
content/posts/switching-from-wordpress-to-hugo/: index.md
content/posts/upgrading-the-hp-server/: index.md
content/posts/upgrading-your-rgb-with-wled-aurora-and-openrgb/: index.md  main.py
content/posts/use-your-oculus-rift-completly-offline/: index.md
content/posts/wake-on-lan-and-dual-boot/: index.md  main.ino
content/projects/: index.md
css/: style.min.css.map
page/1/: index.html
page/2/: index.html
posts/: index.html  index.xml
posts/page/1/: index.html
privacy-policy/: index.html
projects/: index.html
tags/: index.html
tags/arduino/: index.html  index.xml
tags/arduino/page/1/: index.html
tags/batch/: index.html  index.xml
tags/boostrap/: index.html  index.xml
tags/c++/: index.html  index.xml
tags/cordova/: index.html  index.xml
tags/docker/: index.html  index.xml
tags/esp8266/: index.html  index.xml
tags/hardware/: index.html  index.xml
tags/home-assistant/: index.html  index.xml
tags/iot/: index.html  index.xml
tags/nintendo-ds/: index.html  index.xml
tags/oculus/: index.html  index.xml
tags/offline/: index.html  index.xml
tags/python/: index.html  index.xml
tags/reverse-engineering/: index.html  index.xml
tags/rgb/: index.html  index.xml
tags/vr/: index.html  index.xml
tags/web/: index.html  index.xml
tags/wol/: index.html  index.xml
terms-of-use/: index.html
(+51 files in other folders)
